opam-version: "1.2"
maintainer: "stephen.dolan@cl.cam.ac.uk"
authors: ["Stephen Dolan"]
homepage: "https://github.com/stedolan/ocaml-afl-persistent"
bug-reports: "https://github.com/stedolan/ocaml-afl-persistent/issues"
dev-repo: "https://github.com/stedolan/ocaml-afl-persistent.git"
license: "MIT"
build: [[ "./build.sh" ]]
depends: [
  "base-unix"
]
